[gd_scene load_steps=4 format=3 uid="uid://dop6mqeurmmm7"]

[ext_resource type="Script" uid="uid://c0fbmoxdhajwe" path="res://UI/hud.gd" id="1_bytes"]
[ext_resource type="Texture2D" uid="uid://57idvxg4qdmv" path="res://assets/objects/cracker.png" id="2_2o5uh"]
[ext_resource type="Texture2D" uid="uid://d117vmbhh0fo0" path="res://assets/ui/death_icon.png" id="3_2o5uh"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bytes")

[node name="CrackerCount" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="CrackerCount"]
offset_right = 69.0
offset_bottom = 69.0
texture = ExtResource("2_2o5uh")
expand_mode = 1

[node name="CrackerLabel" type="Label" parent="CrackerCount"]
offset_left = 66.0
offset_top = 12.0
offset_right = 106.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0"

[node name="DeathCount" type="Control" parent="CrackerCount"]
layout_mode = 3
anchors_preset = 0
offset_top = 50.0
offset_right = 40.0
offset_bottom = 90.0

[node name="TextureRect" type="TextureRect" parent="CrackerCount/DeathCount"]
offset_left = 10.0
offset_top = 11.0
offset_right = 60.0
offset_bottom = 60.0
texture = ExtResource("3_2o5uh")
expand_mode = 1

[node name="DeathLabel" type="Label" parent="CrackerCount/DeathCount"]
offset_left = 66.0
offset_top = 12.0
offset_right = 106.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0"
